--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Akirami", email = "Akiramiaya@outlook.com"},
 ]
 license = {text = "MIT"}
-dependencies = ["nonebot2>=2.0.0rc2", "nonebot-adapter-onebot>=2.1.5", "httpx>=0.23.0", "nonebot-plugin-apscheduler>=0.2.0"]
+dependencies = ["nonebot2>=2.0.0rc2", "nonebot-adapter-onebot>=2.1.5", "httpx>=0.23.0", "nonebot-plugin-apscheduler>=0.2.0", "nonebot-plugin-htmlrender>=0.2.0.1"]
 requires-python = ">=3.8"
 readme = "README.md"
 
